Fix excessive spacing on sort icon

--- a/BlazorGrid/Content/BlazorGrid.scss
+++ b/BlazorGrid/Content/BlazorGrid.scss
@@ -49,6 +49,8 @@
                     padding: 0 $unit-1 $unit-1 $unit-1;
                     transform: rotate(90deg);
                     display: inline-block;
+                    margin-top: -$unit-1;
+                    margin-bottom: -$unit-1;
                 }
 
                 &.sorted {
